# delta-comic

./: CHANGELOG.md  README.md  capacitor.config.ts  components.d.ts  env.d.ts  external.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-install.yml  bug-runtime.yml  bug.install.yaml  bug.runtime.yml  future-new.yml  future-support.yml  future.new.yaml  future.support.yaml
.github/workflows/: build.yaml  prebuild.yaml
android/: build.gradle  capacitor.settings.gradle  keystore.jks  keystore.properties
android/app/: build.gradle  capacitor.build.gradle  release.jks
patches/: @types__html5plus.patch  @types__jquery.patch  tauri-plugin-m3.patch
public/: manifest.json  setup.avif  setup.css
public/cert/: _cert.pem
script/: build.apk.sh  build.sh  build.web.sh  dev.helper.ts  getVersion.sh
src/: App.vue  AppSetup.vue  global.d.ts  index.css  lib.ts  main.ts  main.tsx  symbol.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: init.rs
src/api/: jm.json  jm.ts
src/api/bika/: comic.ts  comment.ts  image.ts  index.ts  proxy.json  search.ts  user.ts
src/api/cosav/: index.ts  proxy.json  search.ts  video.ts
src/api/jm/: comic.ts  comment.ts  image.ts  index.ts  proxy.json  search.ts  user.ts
src/api/union/: comic.ts  image.ts  index.ts
src/components/: ImagedIcon.vue  await.vue  content.vue  cosav.player.vue  createFavouriteCard.vue  favouriteSelect.vue  forkSelect.vue  image.vue  list.vue  pluginAdd.vue  previewUser.vue  routerTab.vue  shareButton.vue  toggleIcon.vue  unitCard.vue  waterfall.vue
src/components/comic/: comicCard.vue  comicView.helper.tsx  comicView.vue
src/components/comment/: children.vue  childrenComments.vue  commentRow.vue  commentSender.vue  commentView.vue  index.vue  sender.vue
src/components/search/: bikaSorter.vue  cosavSorter.vue  extendableSearchBar.vue  jmSorter.vue  (+6 more)
src/config/: index.ts
src/db/: app.ts  favourite.ts  history.ts  index.ts  itemStore.ts  recentView.ts  subscribe.ts
src/helper/: net.ts
src/pages/: hot.vue  search.vue
src/plugin/: core.ts  db.ts  define.d.ts  index.ts  store.ts  utils.ts
src/router/: index.ts  routes.ts
src/stores/: app.ts  comic.ts  content.ts  index.ts  temp.ts
src/utils/: appUpdate.ts  createForm.tsx  data.ts  db.ts  layout.ts  message.ts  message.tsx  native.ts  request.ts  search.tsx  translator.ts  url.ts
src/views/: index.vue
tauri-plugin-delta-comic/: .gitignore  Cargo.toml  build.rs  package.json
tauri-plugin-delta-comic/android/: build.gradle.kts
tauri-plugin-delta-comic/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-delta-comic/android/src/main/java/: DeltaComicPlugin.kt
tauri-plugin-delta-comic/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-delta-comic/guest-js/: index.ts
tauri-plugin-delta-comic/permissions/: default.toml
tauri-plugin-delta-comic/permissions/autogenerated/: reference.md
tauri-plugin-delta-comic/permissions/autogenerated/commands/: hide_status_bar.toml  open_intent.toml  set_status_bar_color.toml  show_status_bar.toml  unlock_screen_orientation.toml
tauri-plugin-delta-comic/permissions/schemas/: schema.json
tauri-plugin-delta-comic/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+121 files in other folders)
