[package]
name = "delta-comic"
version = "0.1.50"
description = "Per Aspera, Ad Astra"
authors = ["wenxig"]
license = "AGPL-3.0-only"
repository = "https://github.com/delta-comic/delta-comic/"
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0          # 无优化
debug = true           # 开启调试信息
overflow-checks = true # 整数溢出检查
incremental = true     # 启用增量编译

[profile.release]
panic = "abort"    # 崩溃时直接终止
codegen-units = 1  # 一个接一个地编译包，这样编译器就可以更好地优化
lto = true         # 启用链接到优化
opt-level = 3      # 最大优化
strip = true       # 删除调试符号
debug = false      # 关闭调试信息
incremental = true # 启用增量编译

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-persisted-scope = "2.3.5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.5"
tauri-plugin-upload = "2.4.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", features = [
  "sqlite",
], branch = "v2" }
tauri-plugin-pinia = "4.1.0"
tauri-plugin-safe-area-insets = "0.1.0"
tauri-plugin-m3 = "0.3.0"
