
[package]
name = "tauri-plugin-delta-comic"
links = "tauri-plugin-delta-comic"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
serde = "1.0.228"
tauri = { version = "2.9.5" }
thiserror = "2.0.17"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
